k8s/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: top-members
spec:
  rules:
    - host: top-members-staging.k3.l
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
